--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -1,5 +1,22 @@
 @import "colors";
 
+.contact {
+    display: flex;
+    align-items: center;
+    height: calc(100vh - 95px);
+}
+
 .article {
-    
+    width: 50%;
+    float: left;
+}
+
+.article span {
+    display: block;
+    padding: 1em 0;
+}
+
+.article span h3:last-child {
+    margin-top: .5em;
+    text-decoration: underline;
 }
