--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -20,11 +20,11 @@
     top: 50%;
     left: 0;
     width: 100%;
-    transform: translate(0, -50%);
-    -webkit-transform: translate(0, -50%);
-    -moz-transform: translate(0, -50%);
-    -ms-transform: translate(0, -50%);
-    -o-transform: translate(0, -50%);
+    // transform: translate(0, -50%);
+    // -webkit-transform: translate(0, -50%);
+    // -moz-transform: translate(0, -50%);
+    // -ms-transform: translate(0, -50%);
+    // -o-transform: translate(0, -50%);
 }
 
 .projectDetail article p {
