--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -60,7 +60,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    height: calc(100vh - 95px);
+    // height: calc(100vh - 95px);
 }
 
 .project .projectName {
