--- a/styles/global/Scroll.module.scss
+++ b/styles/global/Scroll.module.scss
@@ -1,1 +1,45 @@
 @import "../colors";
+
+.scrollDown {
+    position: fixed;
+    left: 5%;
+    bottom: 5%;
+    width: 56px;
+    height: 56px;
+}
+
+.container {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: $primaryColor;
+    border-radius: 100% !important;
+    -webkit-border-radius: 100% !important;
+    -moz-border-radius: 100% !important;
+    -ms-border-radius: 100% !important;
+    -o-border-radius: 100% !important;
+    transition: all .2s ease-out;
+    -webkit-transition: all .2s ease-out;
+    -moz-transition: all .2s ease-out;
+    -ms-transition: all .2s ease-out;
+    -o-transition: all .2s ease-out;
+}
+
+.scrollDown .item {
+    width: inherit;
+    height: inherit;
+    background-color: $red;
+    transform-origin: 50% 100%;
+}
+
+.scrollDown svg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 9;
+    transform: translate(-50%, -50%) scale(.8) rotate(90deg);
+    -webkit-transform: translate(-50%, -50%) scale(.8) rotate(90deg);
+    -moz-transform: translate(-50%, -50%) scale(.8) rotate(90deg);
+    -ms-transform: translate(-50%, -50%) scale(.8) rotate(90deg);
+    -o-transform: translate(-50%, -50%) scale(.8) rotate(90deg);
+}
